use slightly more efficient way to convert int to Integer & float to Float