@@ -240,7 +240,7 @@ public class OSCByteArrayToJavaConverter {
 //				| (floatBytes[2] << 8)
 //				| (floatBytes[3]);
 		BigInteger floatBits = new BigInteger(floatBytes);
-		return new Float(Float.intBitsToFloat(floatBits.intValue()));
+		return Float.valueOf(Float.intBitsToFloat(floatBits.intValue()));
 	}
 
 	/**
@@ -271,7 +271,7 @@ public class OSCByteArrayToJavaConverter {
 		intBytes[2] = bytes[streamPosition++];
 		intBytes[3] = bytes[streamPosition++];
 		BigInteger intBits = new BigInteger(intBytes);
-		return new Integer(intBits.intValue());
+		return Integer.valueOf(intBits.intValue());
 	}
 
 	/**
